--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,7 @@ body {
 /* Header Section */
 .header {
   height: 100vh;
-  background: linear-gradient(
-      rgba(0, 0, 0, 0.7),
-      rgba(0, 0, 0, 0.7)
-    ),
-    url("assets/background.jpg") center/cover no-repeat;
+  background: url("/assets/images/homPageHeaderBg.png") center/cover no-repeat;
   display: flex;
   flex-direction: column;
 }
@@ -39,6 +35,7 @@ body {
   background: #fff;
   border-radius: 50px;
   padding: 0.5rem 1rem;
+  gap: 0.5rem;
 }
 
 .logo h2 {
@@ -48,33 +45,36 @@ body {
 }
 
 .logo-icon {
-  margin-right: 8px;
-  font-size: 1.2rem;
+  width: 100%;
+  height: 1.5rem;
 }
 
 /* Nav Links */
 .nav-links {
   list-style: none;
   display: flex;
-  gap: 1.5rem;
+  gap: 1rem;
+  background: #fff;
+  padding: 1rem 1rem;
+  border-radius: 25px;
 }
 
 .nav-links a {
   text-decoration: none;
   color: #000;
-  background: #fff;
-  padding: 0.6rem 1rem;
+  padding: 0.2rem 0.5rem;
   border-radius: 25px;
+  /* background: #fff; */
   transition: all 0.3s ease;
 }
 
 .nav-links a:hover {
-  background: #00bcd4;
+  background: #2d2d2d;
   color: #fff;
 }
 
 .contact-btn {
-  background: #000; 
+  background: #000;
   color: #fff;
 }
 
