--- a/css/clients.css
+++ b/css/clients.css
@@ -36,6 +36,7 @@
 
 .card:hover {
   border: 2px solid #007bff;
+  /* box-shadow: 10px 20px 50px  black; */
   transform: translateY(-3px);
 }
 
@@ -84,14 +85,14 @@
 }
 
 
-/* Career Section */
+/* ============================================Career Section ============================================================ */
 .career-section {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   background: #e6f6f8;
-  padding: 80px 10%;
+  padding-left: 10%;
   gap: 40px;
 }
 
@@ -149,6 +150,5 @@
 .career-image img {
   width: 400px;
   max-width: 100%;
-  border-radius: 10px;
   object-fit: cover;
 }
