--- a/css/worldPresence.css
+++ b/css/worldPresence.css
@@ -62,16 +62,27 @@
   display: inline-block;
 }
 
+.cta-container-parent {
+  background: #cecece;
+  margin-top: 3rem;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  padding: 1rem 1.5rem;
+  margin: 60px 5%;
+  border-radius: 12px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+}
 /* CTA box */
 .cta-container {
-  background: #f4f4f4;
+  width: 100%;
+  background: #fff;
+  padding: 0.5rem 1.5rem;
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 1.5rem;
-  margin-top: 3rem;
   border-radius: 12px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.1);
   gap: 1rem;
 }
 
