--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,13 @@
 /* ========================= 
    Footer Section
 ========================= */
+@import url("https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 .main-footer {
   background-color: #111;
   color: #fff;
   padding: 4rem 2rem;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .footer-top {
@@ -20,11 +22,15 @@
   font-weight: 300;
   line-height: 1.5;
   color: #eee;
+  font-family: "MuseoModerno", sans-serif;
+  flex: 1;
 }
 
 .footer-links {
   display: flex;
+  justify-content: space-evenly;
   gap: 3rem;
+  flex: 1;
 }
 
 .footer-links ul {
@@ -45,6 +51,9 @@
   color: #00d4ff;
 }
 
+.footer-contact {
+  flex: 1;
+}
 .footer-contact h3 {
   font-weight: 600;
   margin-bottom: 0.5rem;
@@ -102,43 +111,53 @@
   line-height: 1.6;
 }
 
-.footer-brand h2 {
-  font-weight: 700;
-  margin-bottom: 1rem;
-}
-
-.footer-brand a {
-  color: #00d4ff;
-  text-decoration: underline;
+.footer-brand {
+display: flex;
+width: 100%;
+justify-items: center;
+justify-content: space-between;
+padding-right: 10%;
 }
 
 .footer-right {
-  text-align: right;
+  display: flex;
+  height: 100%;
+  gap: rem;
+  justify-items: baseline;
 }
 
-.footer-links-right {
+
+.footer-brand h2 {
+  font-weight: 700;
+}
+
+.footer-brand a {
+  color: #fff;
+  text-decoration: underline;
+}
+
+
+
+.footer-links-center {
   display: flex;
   gap: 1.5rem;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-  margin-bottom: 1rem;
+  align-items: center;
 }
 
-.footer-links-right a {
+.footer-links-center a {
   color: #fff;
   text-decoration: none;
   font-weight: 600;
   transition: color 0.3s;
 }
 
-.footer-links-right a:hover {
+.footer-links-center a:hover {
   color: #00d4ff;
 }
 
 .social-links {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   gap: 0.8rem;
 }
 
@@ -164,6 +183,12 @@
     text-align: center;
   }
 
+.footer-contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+}
   .footer-links {
     justify-content: center;
   }
