--- a/css/footer.css
+++ b/css/footer.css
@@ -111,24 +111,27 @@
   line-height: 1.6;
 }
 
-.footer-brand {
-display: flex;
-width: 100%;
-justify-items: center;
-justify-content: space-between;
-padding-right: 10%;
-}
-
 .footer-right {
   display: flex;
   height: 100%;
-  gap: rem;
-  justify-items: baseline;
+  gap: 7rem;
+  justify-items: center;
 }
 
+/* ===================================== footer brand ======================== */
+
+.footer-brand {
+  display: flex;
+  width: 100%;
+  justify-items: center;
+  justify-content: space-between;
+  gap: 1.5rem;
+  padding-right: 1rem;
+}
 
 .footer-brand h2 {
   font-weight: 700;
+  text-align: center;
 }
 
 .footer-brand a {
@@ -136,12 +139,11 @@ padding-right: 10%;
   text-decoration: underline;
 }
 
-
-
 .footer-links-center {
   display: flex;
   gap: 1.5rem;
   align-items: center;
+  justify-content: center;
 }
 
 .footer-links-center a {
@@ -176,19 +178,42 @@ padding-right: 10%;
   color: #aaa;
 }
 
+.footer-paragraph-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.copyright {
+  font-size: 0.8rem;
+  color: #aaa;
+}
+
 /* Responsive */
 @media (max-width: 900px) {
   .footer-top {
     flex-direction: column;
     text-align: center;
   }
+  .footer-brand,
+  .footer-right {
+    flex-direction: column;
+  }
+  .footer-brand {
+    gap: 1.5rem;
+    padding: 0;
+  }
+  
 
-.footer-contact {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1;
-}
+  .footer-right {
+    gap: 1.5rem;
+  }
+
+  .footer-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+  }
   .footer-links {
     justify-content: center;
   }
