--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
     /* Header Section */
     .header {
       height: 100vh;
-      background: url("/assets/images/homPageHeaderBg.png") center/cover no-repeat;
+      background: url("../assets/images/homPageHeaderBg.png") center/cover no-repeat;
       display: flex;
       flex-direction: column;
     }
