--- a/css/worldPresence.css
+++ b/css/worldPresence.css
@@ -71,6 +71,7 @@
   justify-items: center;
   padding: 1rem 1.5rem;
   margin: 60px 5%;
+  border: 1px solid #000;
   border-radius: 12px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
