--- a/css/industry.css
+++ b/css/industry.css
@@ -5,6 +5,13 @@
   background: #fff;
 }
 
+.industry-heading {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin-bottom: 40px;
+}
+
 .industry-heading h2 {
   font-size: 28px;
   font-weight: 600;
@@ -19,7 +26,6 @@
   font-size: 15px;
   color: #555;
   margin-top: 8px;
-  margin-bottom: 40px;
 }
 
 .industry-grid {
@@ -47,7 +53,7 @@
   left: 0.5rem;
   max-width: 130px;
   line-height: 1.2;
-  word-break: break-word; 
+  word-break: break-word;
 }
 
 .industry-card img {
