--- a/css/about-us/success.css
+++ b/css/about-us/success.css
@@ -93,6 +93,8 @@
   align-items: center;
   background: linear-gradient(rgba(10, 12, 30, 0.95), rgba(10, 12, 30, 0.95)),
     url("assets/wave-lines.svg");
+  background: url("../../assets/images/service/contactCardBg.png") center/cover
+    no-repeat;
   background-size: cover;
   background-position: center;
   border-radius: 15px;
