[ADD]: update career page ui, add redirect mail link on form

--- a/css/career/cardgrid.css
+++ b/css/career/cardgrid.css
@@ -1,6 +1,6 @@
 .career-section {
   padding: 80px 5%;
-  background: #FFFFFF;
+  background: #ffffff;
   font-family: "Poppins", sans-serif;
   color: #222;
 }
@@ -39,12 +39,15 @@
 }
 
 .career-card {
-  background: #E6E6E6;
+  background: #e6e6e6;
   border-radius: 12px;
   padding: 25px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
   position: relative;
   transition: transform 0.2s ease, box-shadow 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .career-card:hover {
@@ -80,13 +83,22 @@
   color: #444;
 }
 
+.card-footer {
+  background: #fff;
+  border-radius: 0.5rem;
+  padding: 8px 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .apply-btn {
   display: flex;
   align-items: center;
   justify-content: center;
   background: #222;
   color: #fff;
-  padding: 8px 16px;
+  padding: 1% 7%;
   border: none;
   border-radius: 6px;
   font-size: 0.9rem;
