--- a/css/service/qa-section.css
+++ b/css/service/qa-section.css
@@ -8,7 +8,7 @@
 
 .qa-heading {
   font-size: 1.3rem;
-  text-align: center;
+  text-align: top;
   font-weight: 500;
   margin-bottom: 50px;
   color: #222;
