--- a/css/about-us/success.css
+++ b/css/about-us/success.css
@@ -90,7 +90,7 @@
 .contact-card {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
   background: linear-gradient(rgba(10, 12, 30, 0.95), rgba(10, 12, 30, 0.95)),
     url("assets/wave-lines.svg");
   background: url("../../assets/images/service/contactCardBg.png") center/cover
