--- a/css/product/info-section.css
+++ b/css/product/info-section.css
@@ -1,9 +1,9 @@
-.pos-section {
+.info-section {
   padding: 40px 5%;
   color: black;
 }
 
-.pos-header {
+.info-header {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -17,18 +17,18 @@ main .divider {
   background-color: #5e5e5e;
 }
 
-.pos-header .left {
+.info-header .left {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.pos-left-text h2 {
+.info-left-text h2 {
   font-size: 2.5rem;
   font-weight: 700;
 }
 
-.pos-left-text h4 {
+.info-left-text h4 {
   font-size: 26px;
   font-weight: 500;
   line-height: 1.4;
@@ -55,7 +55,23 @@ main .divider {
   font-weight: bold;
 }
 
-.pos-image img {
+.highlight-box-with-logo {
+  border: 2px solid #c0c0c0;
+  padding: clamp(6px, 1.5vw, 14px) clamp(8px, 2vw, 20px);
+  border-radius: 1.5rem;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.highlight-box-with-logo img {
+  width: 15%;
+  display: block;
+}
+
+.info-image img {
   width: 500px;
   max-width: 100%;
   height: 100%;
@@ -116,14 +132,14 @@ main .divider {
     justify-content: center;
   }
 
-  .pos-header {
+  .info-header {
     flex-direction: column;
   }
-  .pos-header .left {
+  .info-header .left {
     gap: 1.5rem;
   }
 
-  .pos-image img {
+  .info-image img {
     width: 100%;
   }
 }
