--- a/css/product/stats.css
+++ b/css/product/stats.css
@@ -24,6 +24,14 @@
   font-size: 48px;
   font-weight: 700;
   margin: 0 0 10px;
+  display: inline-flex;
+  align-items: baseline;
+  min-width: 90px;               /* prevents layout shift */
+  font-variant-numeric: tabular-nums; /* equal-width digits */
+}
+
+.plus {
+  margin-left: 4px;
 }
 
 .stat-item p {
@@ -57,6 +65,7 @@
     width: 50%;
     margin-bottom: 20px;
   }
+
 }
 
 @media (max-width: 500px) {
@@ -66,6 +75,7 @@
 
   .stat-item h2 {
     font-size: 38px;
+    min-width: 70px;
   }
 
   .stat-item p {
