--- a/css/product/info-section.css
+++ b/css/product/info-section.css
@@ -142,4 +142,13 @@ main .divider {
   .info-image img {
     width: 100%;
   }
+
+  .info-left-text h2 {
+    font-size: 2rem;
+    font-weight: 700;
+  }
+
+  .info-left-text h4 {
+    font-size: 20px;
+  }
 }
